--- a/css/styles.css
+++ b/css/styles.css
@@ -1,70 +1,105 @@
 @charset "utf-8";
 /* CSS Document */
 
-body,td,th,p{
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
-	color: #333;
-	line-height: 1.5;
+body,
+td,
+th,
+p {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 10pt;
+  color: #333;
+  line-height: 1.5;
 }
+
 body {
-	background-color: #fdfdfd;
-	margin: 0;
-	position:relative;
+  background-color: #fdfdfd;
+  margin: 0;
+  position: relative;
 }
-ul, li {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
-	color: #333;
+
+ul,
+li {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 10pt;
+  color: #333;
 }
+
 a {
-	color: #01447e;
-	text-decoration: none;
+  color: #01447e;
+  text-decoration: none;
 }
-a:hover, a:focus {
-	color: #01447e;
-	text-decoration: none;
+
+a:hover,
+a:focus {
+  color: #01447e;
+  text-decoration: none;
 }
-a img{
-	border: none 0px #fff;
+
+a img {
+  border: none 0px #fff;
 }
-h1, h2, h3, h4, h5, h6 {
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0 0 20px;
 }
-article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-	display: block;
+
+article,
+aside,
+canvas,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
+
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
 }
+
 #footer {
   background-color: #444;
-  color:#dcdcdc;
+  color: #dcdcdc;
   font-size: 8pt;
   letter-spacing: 1px;
   padding: 25px;
   text-align: center;
   text-transform: uppercase;
 }
-#footer a strong{
-  color:#b0e9ff;
+
+#footer a strong {
+  color: #b0e9ff;
 }
+
 .leaflet-container a {
-  color: #01447e!important;
+  color: #01447e !important;
 }
+
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
   height: 80px;
   background-color: #252831;
-  text-align:center;
+  text-align: center;
   display: flex;
 }
+
 nav h1 {
   margin: auto;
 }
+
 nav h1 a {
   color: #fff;
   font-size: 14pt;
@@ -72,44 +107,47 @@ nav h1 a {
   letter-spacing: 10px;
   text-transform: uppercase;
 }
+
 #breadcrumb {
-    padding: 10px 40px 16px;
-    list-style: none;
-    background-color: #eee;
-    font-size: 17px;
-    margin: 0;
-    width: calc(50% - 80px);
+  padding: 10px 40px 16px;
+  list-style: none;
+  background-color: #eee;
+  font-size: 17px;
+  margin: 0;
+  width: calc(50% - 80px);
 }
 
 /* Display list items side by side */
 #breadcrumb li {
-    display: inline;
+  display: inline;
 }
 
 /* Add a slash symbol (/) before/behind each list item */
 #breadcrumb li+li:before {
-    padding: 8px;
-    color: black;
-    content: "/\00a0";
+  padding: 8px;
+  color: black;
+  content: "/\00a0";
 }
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0275d8;
-    text-decoration: none;
+  color: #0275d8;
+  text-decoration: none;
 }
 
 /* Add a color on mouse-over */
 #breadcrumb li a:hover {
-    color: #01447e;
-    text-decoration: underline;
+  color: #01447e;
+  text-decoration: underline;
 }
+
 /* ====================== Map ====================== */
 #map {
   height: 400px;
   width: 100%;
   background-color: #ccc;
 }
+
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
@@ -117,6 +155,7 @@ nav h1 a {
   background-color: #01447e;
   align-items: center;
 }
+
 .filter-options h2 {
   color: white;
   font-size: 1rem;
@@ -124,10 +163,11 @@ nav h1 a {
   line-height: 1;
   margin: 0 20px;
 }
+
 .filter-options select {
   background-color: white;
   border: 1px solid #fff;
-  font-family: Arial,sans-serif;
+  font-family: Arial, sans-serif;
   font-size: 11pt;
   height: 35px;
   letter-spacing: 0;
@@ -135,14 +175,17 @@ nav h1 a {
   padding: 0 10px;
   width: 200px;
 }
+
 .filter-options select:focus {
   outline: 0;
   box-shadow: 0 0 8px 3px rgba(255, 254, 255, 0.849);
 }
+
 #restaurants-list li a:focus {
   outline: 0;
   box-shadow: 0 0 8px 3px rgba(245, 133, 0, 0.78);
 }
+
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
   background-color: #f3f3f3;
@@ -151,16 +194,18 @@ nav h1 a {
   padding: 30px 15px 60px;
   text-align: center;
 }
+
 #restaurants-list li {
   background-color: #fff;
   border: 2px solid #ccc;
-  font-family: Arial,sans-serif;
+  font-family: Arial, sans-serif;
   margin: 15px;
   min-height: 380px;
   padding: 0 30px 25px;
   text-align: left;
-  width: 270px; 
-  }
+  width: 270px;
+}
+
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
@@ -169,9 +214,10 @@ nav h1 a {
   /* min-height: 248px; */
   min-width: 100%;
 }
+
 #restaurants-list li h1 {
   color: #01447e;
-  font-family: Arial,sans-serif;
+  font-family: Arial, sans-serif;
   font-size: 14pt;
   font-weight: 200;
   letter-spacing: 0;
@@ -179,10 +225,12 @@ nav h1 a {
   margin: 20px 0 10px;
   text-transform: uppercase;
 }
+
 #restaurants-list p {
   margin: 0;
   font-size: 11pt;
 }
+
 #restaurants-list li a {
   background-color: #01447e;
   border-bottom: 3px solid #01447e;
@@ -203,6 +251,7 @@ nav h1 a {
   width: 100%;
   z-index: 1000;
 }
+
 .inside #map-container {
   background: blue none repeat scroll 0 0;
   height: 87%;
@@ -211,19 +260,22 @@ nav h1 a {
   top: 80px;
   width: 50%;
 }
+
 .inside #map {
   background-color: #ccc;
   height: 100%;
   width: 100%;
 }
+
 .inside #footer {
   bottom: 0;
   position: absolute;
   width: 50%;
 }
+
 #restaurant-name {
   color: #01447e;
-  font-family: Arial,sans-serif;
+  font-family: Arial, sans-serif;
   font-size: 20pt;
   font-weight: 200;
   letter-spacing: 0;
@@ -231,13 +283,16 @@ nav h1 a {
   text-transform: uppercase;
   line-height: 1.1;
 }
+
 #restaurant-img {
-	width: 90%;
+  width: 90%;
 }
+
 #restaurant-address {
   font-size: 12pt;
   margin: 10px 0px;
 }
+
 #restaurant-cuisine {
   background-color: #333;
   color: #ddd;
@@ -248,17 +303,21 @@ nav h1 a {
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
+  width: 90%;
 }
-#restaurant-container, #reviews-container {
+
+#restaurant-container,
+#reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   padding: 140px 40px 30px;
   width: 50%;
 }
+
 #reviews-container {
   padding: 30px 40px 80px;
 }
+
 #reviews-container h2 {
   color: #01447e;
   font-size: 24pt;
@@ -266,13 +325,15 @@ nav h1 a {
   letter-spacing: -1px;
   padding-bottom: 1pt;
 }
+
 #reviews-list {
   margin: 0;
   padding: 0;
 }
+
 #reviews-list li {
   background-color: #fff;
-    border: 2px solid #f3f3f3;
+  border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
   margin: 0 0 30px;
@@ -281,96 +342,131 @@ nav h1 a {
   position: relative;
   width: 85%;
 }
+
 #reviews-list li p {
   margin: 0 0 10px;
 }
+
 #restaurant-hours td {
   color: #666;
 }
 
 /* ====================== Media Queries ====================== */
 
-@media screen and (min-width : 320px){
+@media screen and (min-width : 320px) {
   #restaurants-list li {
     margin: 15px auto;
     padding: 10px 10px;
     max-width: 100%;
-}
+  }
+
   .filter-options {
     width: 100%;
     height: auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-}
-.filter-options h2 {
-  margin: 3% 20px;
-}
-#restaurants-list .restaurant-img{
-  max-height: 100%;
-}
-.inside #map-container {
-  height: 38%;
-  right: 0;
-  top: 20%;
-  width: 100%;
-}
-#restaurant-container {
-  padding: 100% 0px 30px;
-  width: 100%;
-  margin: 20px 0;
-}
-#breadcrumb {
-  width: calc(100% - 80px);
-}
-.inside #footer {
-  width: calc(100% - 50px);
-}
-#reviews-container {
-  width: calc(100% - 80px);
-}
+  }
+
+  .filter-options h2 {
+    margin: 3% 20px;
+  }
+
+  #restaurants-list .restaurant-img {
+    max-height: 100%;
+  }
+
+  .inside #map-container {
+    height: 38%;
+    right: 0;
+    top: 20%;
+    width: 100%;
+  }
+
+  #restaurant-container {
+    padding: 100% 0px 30px;
+    width: 100%;
+    margin: 20px 0;
+  }
+
+  #breadcrumb {
+    width: calc(100% - 80px);
+  }
+
+  .inside #footer {
+    width: calc(100% - 50px);
+  }
+
+  #reviews-container {
+    width: calc(100% - 80px);
+  }
 }
 
-@media screen and (min-width :321px) and (max-width : 480px){
+@media screen and (min-width :321px) and (max-width : 480px) {
   .filter-options {
     flex-direction: column;
     /* justify-content: flex-end; */
+  }
+
+  #restaurants-list li {
+    padding: 10px 10%;
+  }
+
+  .inside #map-container {
+    height: 50%;
+    top: 22%;
+  }
 }
-#restaurants-list li {
-  padding: 10px 10%;
-}
-.inside #map-container {
-  height: 50%;
-  top: 22%;
-}
-}
+
 @media screen and (min-width: 768px) {
   #restaurants-list {
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
   }
+
   .inside #map-container {
-    height: 60%;}
-    #restaurant-container {
-      padding: 62% 0px 30px;}
+    height: 60%;
+  }
+
+  #restaurant-container {
+    padding: 62% 0px 30px;
+  }
+
+  .skip {
+
+    width: 125px;
+    height: 35px;
+    line-height: 35px;
+    left: 44%;
+    position: absolute;
+    top: 80px;
+    z-index: 1000;
+    background: #fff;
+    padding: 10px;
+  }
 }
+
 @media screen and (min-width: 1024px) {
   .inside #map-container {
     height: 87%;
     top: 16%;
     width: 50%;
-}
-#restaurant-container{
-  padding: 140px 40px 30px;
-  width: 50%;}
+  }
+
+  #restaurant-container {
+    padding: 140px 40px 30px;
+    width: 50%;
+  }
+
   #reviews-container {
     padding: 60px 40px 30px;
     width: 47%;
   }
 }
+
 @media screen and (min-width: 1200px) {
   .inside #footer {
     width: calc(50% - 50px);
-}
+  }
 }
