--- a/css/styles.css
+++ b/css/styles.css
@@ -416,7 +416,6 @@ nav h1 a {
 @media screen and (min-width :321px) and (max-width : 480px) {
   .filter-options {
     flex-direction: column;
-    /* justify-content: flex-end; */
   }
 
   #restaurants-list li {
@@ -427,6 +426,9 @@ nav h1 a {
     height: 50%;
     top: 22%;
   }
+  .filter-options select {
+    width: 30%;
+}
 }
 
 @media screen and (min-width: 768px) {
